feat:字体+按需引入elementUi

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,21 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    @font-face {
+      /* 思源黑体 */
+      font-family: 'SourceHanSansCN';  
+      src: url('../src/assets/fonts/SourceHanSansCN-Regular.otf') format('otf'),  
+          url('../src/assets/fonts/SourceHanSansCN-Regular.otf') format('woff2');  
+      font-weight: normal;  
+      font-style: normal; 
+    }
+    @font-face {
+      /* 楷体 */
+      font-family: 'KaiTi';  
+      src: url('../src/assets/fonts/KaiTi.ttf') format('otf');
+      font-weight: normal;  
+      font-style: normal; 
+    }
+  </style>
 </html>
